# dl-ds-hw-2

./: .gitignore  main.ipynb  pyproject.toml  result_submission.csv
